# FlowMint

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  DEVELOPMENT.md  Dockerfile  Dockerfile.app  Dockerfile.server  Makefile  README.md  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  fly.mainnet.toml  fly.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
.github/workflows/: ci.yml  deploy.yml
app/: next.config.js  package.json  playwright.config.ts  tailwind.config.ts  vercel.json
app/e2e/: analytics.spec.ts  dca.spec.ts  home.spec.ts  payments.spec.ts  stop-loss.spec.ts  swap.spec.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: Footer.tsx  Header.tsx  (+1 more)
docker/: nginx.conf
docs/: architecture.md  developer-guide.md  risk-policies.md  usage.md  v2-merchant-integration.md
grafana/: README.md  prometheus.yml
grafana/dashboards/: flowmint-overview.json
program/: Anchor.toml  Cargo.toml  package.json  tsconfig.json
program/programs/flowmint/: Cargo.toml
program/programs/flowmint/src/: errors.rs  jupiter.rs  lib.rs  state.rs
program/programs/flowmint/src/instructions/: admin.rs  initialize.rs  mod.rs  payment.rs  swap.rs
program/tests/: flowmint.ts
scripts/: deploy-devnet.sh  initialize-devnet.ts
sdk/: package.json  tsconfig.json
sdk/src/: client.ts  errors.ts  index.ts  types.ts
server/: .dockerignore  Dockerfile  jest.config.js  package.json  tsconfig.json
server/src/: app.ts  index.ts
server/tests/: portfoliopay.test.ts  setup.ts
(+131 files in other folders)
