[package]
name = "flowmint"
version = "0.1.0"
description = "FlowMint - Execution layer over Jupiter on Solana"
edition = "2021"
license = "MIT"
repository = "https://github.com/BacBacta/FlowMint"

[lib]
crate-type = ["cdylib", "lib"]
name = "flowmint"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
bytemuck = { version = "1.14", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
